--- a/assets/index.html
+++ b/assets/index.html
@@ -11,6 +11,9 @@
                 <video id="webcam" autoplay playsinline webkit-playsinline></video>
                 <canvas class="output_canvas" id="output_canvas" width="1280" height="720"></canvas>
             </div>
+            <script>
+                console.log("Check1");
+            </script>
             <script type="module" src="script.js"></script>
         </section>
     </body>
