--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <section id="wrapper" class="invisible">
-            <div id="liveView" class="videoView" style="border: 1px solid #ff0000;">
+            <div id="liveView" class="videoView">
                 <video id="webcam" autoplay playsinline webkit-playsinline></video>
                 <canvas class="output_canvas" id="output_canvas" width="1280" height="720"></canvas>
             </div>
